Creating landing page
Creating a landing page of psychologist Eliza

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,173 @@
+---
+import "../styles/global.css";
+import Contacto from "../components/Contacto.astro";
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
+import { ClientRouter } from "astro:transitions";
+import Analytics from "@vercel/analytics/astro";
+---
+
 <!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>Mentes Sanas</title>
+    <ClientRouter />
+    <Analytics />
+  </head>
+  <body>
+    <Header />
+    <slot />
+    <Contacto />
+    <Footer />
+  </body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+<style is:global>
+  html,
+  body {
+    background-color: #ffffff;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    scroll-behavior: smooth;
+  }
+
+  #toTop {
+    animation: cambiar linear both;
+    animation-timeline: scroll(root);
+    animation-range: 0 20%;
+  }
+
+  .Card-service:hover {
+    animation: elastic-ultrasoft 0.6s ease-out;
+  }
+
+  .Eli-chan-2:hover {
+    animation: elastic-ultrasoft 0.6s ease-in-out both;
+  }
+  .badges {
+    position: relative;
+    overflow: hidden;
+    background: repeating-linear-gradient(
+      13372b 90deg,
+      #13372b 0px,
+      #2b6d51 2px,
+      #1f8c63 4px
+    );
+    background-size: 200% auto;
+    box-shadow:
+      inset 0 0 8px #ffffff55,
+      0 0 10px #0003;
+  }
+  .badges::before {
+    content: "";
+    position: absolute;
+    top: -50%;
+    left: -100%;
+    width: 200%;
+    height: 200%;
+    background: linear-gradient(
+      120deg,
+      transparent 40%,
+      rgba(255, 255, 255, 0.918) 50%,
+      transparent 60%
+    );
+    animation: metal-shine 2.5s ease-in-out infinite;
+  }
+
+  @keyframes metal-shine {
+    0% {
+      transform: translateX(-100%) rotate(25deg);
+    }
+    100% {
+      transform: translateX(100%) rotate(25deg);
+    }
+  }
+  @keyframes bg-fade-dark {
+    0% {
+      background-color: #076925; /* celeste claro */
+    }
+    50% {
+      background-color: #3cbd63; /* azul intermedio */
+    }
+    100% {
+      background-color: #0dc143; /* azul oscuro */
+    }
+  }
+  @media screen and (min-width: 48rem) {
+    .Eli-chan:hover {
+      animation: squeeze 0.6s ease-in-out both;
+    }
+  }
+  @keyframes elastic-ultrasoft {
+    0% {
+      transform: scale(1, 1);
+    }
+    25% {
+      transform: scale(1.05, 0.95);
+    }
+    50% {
+      transform: scale(0.97, 1.03);
+    }
+    75% {
+      transform: scale(1.01, 0.99);
+    }
+    100% {
+      transform: scale(1, 1);
+    }
+  }
+
+  @keyframes squeeze {
+    0% {
+      transform: scale(1, 1);
+    }
+    30% {
+      transform: scale(1.2, 0.8);
+    }
+    50% {
+      transform: scale(0.9, 1.1);
+    }
+    70% {
+      transform: scale(1.05, 0.95);
+    }
+    100% {
+      transform: scale(1, 1);
+    }
+  }
+
+  @keyframes cambiar {
+    from {
+      display: hidden;
+      opacity: 0;
+      cursor: auto;
+    }
+    to {
+      display: block;
+      opacity: 1;
+      cursor: pointer;
+    }
+  }
+  input {
+    border-bottom: 2px solid #252529;
+    padding-inline: 10px;
+    border-radius: 3px;
+    &&:hover {
+      border-bottom: 2px solid #4b7184;
+    }
+  }
+
+  textarea {
+    border-bottom: 2px solid #252529;
+    padding-inline: 10px;
+    border-radius: 3px;
+    resize: none;
+    overflow-y: auto;
+
+    &&:hover {
+      border-bottom: 2px solid #4b7184;
+    }
+  }
 </style>
