--- a/src/components/ServiceCard.astro
+++ b/src/components/ServiceCard.astro
@@ -2,7 +2,7 @@
 const { id, nombre, img, modalidad, duracion, precio } = Astro.props;
 ---
 
-<a href={`/ServicesPsy/${id}`} data-id={id}>
+<a href={`/servicespsy/${id}`} data-id={id}>
   <article
     class="Card-service flex flex-cols gap-1 md:gap-3 rounded-lg overflow-hidden border w-[270px] h-[216px] md:w-[380px] md:min-h-[305px] hover:bg-[#a0d8d7] hover:text-black"
   >
