--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -1,5 +1,5 @@
 ---
-import servicios from "../mocks/servicios.json";
+import servicios from "../data/servicios.json";
 import ServiceCard from "./ServiceCard.astro";
 ---
 
